[project]
name = "langchain-langgraph-agentic-ai-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "ddgs>=9.12.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-agent>=0.1.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
]
